--- a/Text_Generation.ipynb
+++ b/Text_Generation.ipynb
@@ -372,7 +372,7 @@
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Dense,LSTM,Embedding\n",
         "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-        "from keras.models import load_model"
+        "from tensorflow.keras.models import load_model"
       ],
       "execution_count": 123,
       "outputs": []
